# rabbitmq-json-schema-test

./: Cargo.toml  README.md  schema.json
src/: main.rs
