[package]
name = "rabbitmq-json-schema-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "=1.0.100" }
futures = { version = "=0.3.31" }
rabbitmq-stream-client = { version = "=0.9.0" }
tokio = { version = "=1.48.0" }
serde = { version = "=1.0.228" }
serde_json = { version = "=1.0.145" }
tracing = { version = "=0.1.41" }
tracing-subscriber = { version = "=0.3.20" }
typify = { version = "=0.5.0" }